<resources>
    <string name="app_name">SystemControl</string>
    <string name="appwidget_text">SystemControl</string>
    <string name="configure">选择显示的控件</string>
    <string name="add_widget">添加小部件</string>
    <string name="main_string_voip_voice">通话音量</string>
    <string name="main_string_voip_voice_cur" />
    <string name="main_string_voip_voice_max" />
    <string name="main_string_system_voice_cur" />
    <string name="main_string_system_voice">系统音量</string>
    <string name="main_string_system_voice_max" />
    <string name="main_string_ring_voice">铃声音量</string>
    <string name="main_string_ring_voice_cur" />
    <string name="main_string_ring_voice_max" />
    <string name="main_string_music_voice">音乐音量</string>
    <string name="main_string_music_voice_cur" />
    <string name="main_string_noti_voice">提示音量</string>
    <string name="main_string_music_voice_max" />
    <string name="widget_string_checkbox1_text">系统音量</string>
    <string name="widget_string_checkbox2_text">铃声音量</string>
    <string name="widget_string_checkbox3_text">音乐音量</string>
    <string name="widget_string_checkbox4_text">通话音量</string>
    <string name="widget_string_checkbox5_text">提示音量</string>
    <string name="main_string_noti_voice_max" />
    <string name="main_string_noti_voice_cur" />
    <string name="widget_string_system_voice">系统音量</string>
    <string name="widget_string_voip_voice">通话音量</string>
    <string name="textview10">TextView</string>
    <string name="log1">开启Log</string>
    <string name="push1">进阶列表</string>
    <string name="textview">TextView</string>
    <string name="string_text1">测试</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_retry"> 重    试 </string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="str_screen_shot">截图</string>
    <string name="button">Button</string>
    <string name="accessibility_service_name">---测试无障碍服务---</string>
    <string name="accessibility_service_description">开启测试无障碍服务,体验更快捷的操作方式。</string>
    <string name="widget_string_sms_voice">信息音量</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="widget_string_system_light">亮度</string>
    <string name="btnPushNotification">推送通知</string>
    <string name="checkbox_thursday">Thursday</string>
    <string name="timer_schedule_cycle_title_text">Time Schedule Cycle</string>

    <string-array name="select_models">
        <item>BigModel(GLM-4.7-Flash)</item>
        <item>Ollama(qwen3-vl:235b-cloud)</item>
    </string-array>

    <string name="search_spinner_prompt">请选择</string>
    <string name="btn_add_apikey">添加ApiKey</string>
</resources>
